--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -107,6 +107,8 @@ jobs:
     - name: Install dependencies
       run: |
         npm install -g fleetctl
+    - name: Setup upterm session
+      uses: lhotari/action-upterm@v1
     - name: Install Orbit
       run: |
         fleetctl config set --address ${{ needs.gen.outputs.address }}
@@ -116,7 +118,7 @@ jobs:
         echo "Hostname: $(hostname -s)"
         fleetctl package --type deb --fleet-url=${{ needs.gen.outputs.address }} --enroll-secret=$SECRET
         sudo dpkg -i fleet-osquery*
-        systemctl start orbit.service
+        sudo systemctl start orbit.service
         until fleetctl get hosts | grep -iF $(hostname -s);
         do
           echo "Awaiting enrollment..."
