--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -53,9 +53,11 @@ jobs:
         ./build/fleetctl get enroll-secret
         sleep 600
 
-  wait-server:
+  login:
    runs-on: ubuntu-latest
    needs: gen
+   outputs:
+     token: ${{ steps.login.outputs.token }}
    steps:
         # Download fleet and fleetctl binaries from last successful build on main
     - name: Download binaries
@@ -67,7 +69,8 @@ jobs:
         path: build
         check_artifacts: true
     
-    - name: Attempt login
+    - id: login
+      name: Attempt login
       timeout-minutes: 5
       run: |
         chmod +x ./build/fleetctl
@@ -77,6 +80,8 @@ jobs:
           echo "Retrying in 5s..."
           sleep 5
         done
+        TOKEN=cat ~/.fleet/config| grep token | awk '{ print $2 }'
+        echo "::set-output name=token::$TOKEN"
       
   orbit-macos:
     strategy:
@@ -84,7 +89,7 @@ jobs:
         orbit-channel: [ 'stable', 'edge' ]
         osqueryd-channel: ['stable', 'edge' ]
     runs-on: macos-latest
-    needs: [gen, wait-server]
+    needs: [gen, login]
     steps:
     - name: Install dependencies
       run: |
@@ -92,8 +97,7 @@ jobs:
     - name: Install Orbit
       run: |
         sudo hostname macos-orbit-${{ matrix.orbit-channel }}-osqueryd-${{ matrix.osqueryd-channel }}
-        fleetctl config set --address ${{ needs.gen.outputs.address }}
-        fleetctl login
+        fleetctl config set --address ${{ needs.gen.outputs.address }} --token ${{ needs.login.outputs.token }}
         SECRET=$(fleetctl get enroll_secret --json | jq -r '.spec.secrets[0].secret')
         echo "Secret: $SECRET"
         echo "Hostname: $(hostname -s)"
@@ -111,7 +115,7 @@ jobs:
         orbit-channel: [ 'stable', 'edge' ]
         osqueryd-channel: ['stable', 'edge' ]
     runs-on: ubuntu-latest
-    needs: [gen, wait-server]
+    needs: [gen, login]
     steps:
     - name: Install dependencies
       run: |
@@ -128,8 +132,7 @@ jobs:
       run: |
         sudo hostname ubuntu-orbit-${{ matrix.orbit-channel }}-osqueryd-${{ matrix.osqueryd-channel }}
         chmod +x ./build/fleetctl
-        fleetctl config set --address ${{ needs.gen.outputs.address }}
-        fleetctl login
+        fleetctl config set --address ${{ needs.gen.outputs.address }} --token ${{ needs.login.outputs.token }}
         SECRET=$(fleetctl get enroll_secret --json | jq -r '.spec.secrets[0].secret')
         echo "Secret: $SECRET"
         echo "Hostname: $(hostname -s)"
@@ -142,22 +145,13 @@ jobs:
           sleep 1
         done
 
-  test-windows:
-    runs-on: windows-latest
-    steps:
-    - name: Install dependencies
-      shell: bash
-      run: |
-        npm install -g fleetctl
-        fleetctl --version
-        
   orbit-windows-build:
     strategy:
       matrix:
         orbit-channel: [ 'stable', 'edge' ]
         osqueryd-channel: ['stable', 'edge' ]
     runs-on: ubuntu-latest
-    needs: [gen, wait-server]
+    needs: [gen, login]
     steps:
     - name: Install dependencies
       run: |
@@ -165,15 +159,31 @@ jobs:
         npm install -g fleetctl
     - name: Install Orbit
       run: |
-        fleetctl config set --address ${{ needs.gen.outputs.address }}
-        fleetctl login
+        fleetctl config set --address ${{ needs.gen.outputs.address }} --token ${{ needs.login.outputs.token }}
         SECRET=$(fleetctl get enroll_secret --json | jq -r '.spec.secrets[0].secret')
         echo "Secret: $SECRET"
         echo "Hostname: $(hostname -s)"
         fleetctl package --type msi --fleet-url=${{ needs.gen.outputs.address }} --enroll-secret=$SECRET  --orbit-channel=${{ matrix.orbit-channel }} --osqueryd-channel=${{ matrix.osqueryd-channel }}
         mv fleet-osquery.msi orbit-${{ matrix.orbit-channel }}-osqueryd-${{ matrix.osqueryd-channel }}.msi
-    - name: upload
+    - name: Upload MSI
       uses: actions/upload-artifact@v2
       with:
         name: orbit-${{ matrix.orbit-channel }}-osqueryd-${{ matrix.osqueryd-channel }}.msi
-        path: orbit-${{ matrix.orbit-channel }}-osqueryd-${{ matrix.osqueryd-channel }}.msi        
+        path: orbit-${{ matrix.orbit-channel }}-osqueryd-${{ matrix.osqueryd-channel }}.msi
+
+  orbit-windows:
+    strategy:
+      matrix:
+        orbit-channel: [ 'stable', 'edge' ]
+        osqueryd-channel: ['stable', 'edge' ]
+    runs-on: windows-latest
+    steps:
+    - name: Install dependencies
+      shell: bash
+      run: |
+        npm install -g fleetctl
+
+    - name: Download MSI
+      uses: actions/download-artifact@v2
+      with:
+        name: orbit-${{ matrix.orbit-channel }}-osqueryd-${{ matrix.osqueryd-channel }}.msi
