split windows install

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -189,10 +189,13 @@ jobs:
       with:
         name: orbit-${{ matrix.orbit-channel }}-osqueryd-${{ matrix.osqueryd-channel }}.msi
     
-    - name: Install and check
-      shell: bash
+    - name: Install Orbit
       run: |
         msiexec /a /qn /lv orbit-${{ matrix.orbit-channel }}-osqueryd-${{ matrix.osqueryd-channel }}.msi
+
+    - name: Check installation
+      shell: bash
+      run: |
         until fleetctl get hosts | grep -iF $(hostname -s);
         do
           echo "Awaiting enrollment..."
