--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -157,7 +157,7 @@ jobs:
       run: |
         docker pull fleetdm/wix:latest &
         npm install -g fleetctl
-    - name: Install Orbit
+    - name: Build Orbit
       run: |
         fleetctl config set --address ${{ needs.gen.outputs.address }} --token ${{ needs.login.outputs.token }}
         SECRET=$(fleetctl get enroll_secret --json | jq -r '.spec.secrets[0].secret')
@@ -192,7 +192,7 @@ jobs:
     
     - name: Install Orbit
       run: |
-        msiexec /a /quiet /passive /lv ${{steps.download.outputs.download-path}}\orbit-${{ matrix.orbit-channel }}-osqueryd-${{ matrix.osqueryd-channel }}.msi
+        msiexec ${{steps.download.outputs.download-path}}\orbit-${{ matrix.orbit-channel }}-osqueryd-${{ matrix.osqueryd-channel }}.msi /a /quiet /passive /lv log.txt
 
     - name: Setup tmate session
       uses: mxschmitt/action-tmate@v3
