--- a/website/.eslintrc
+++ b/website/.eslintrc
@@ -42,7 +42,9 @@
 
     // Models:
     "User": true,
-    "HistoricalUsageSnapshot": true
+    "HistoricalUsageSnapshot": true,
+    "Quote": true,
+    "Subscription": true,
 
     // …and any others.
     // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
