--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -6,12 +6,6 @@ on:
   schedule:
   - cron: '0 2 * * *' # Nightly 2AM UTC
 
-env:
-  EMAIL: admin@example.com
-  PASSWORD: admin123#
-  # Use instance identifier to allow for duplicate UUIDs
-  FLEET_OSQUERY_HOST_IDENTIFIER: instance
-
 jobs:
   gen:
     runs-on: ubuntu-latest
@@ -23,7 +17,7 @@ jobs:
       run: |
         UUID=$(uuidgen)
         echo "::set-output name=subdomain::fleet-preview-$UUID"
-        echo "::set-output name=address::https://fleet-preview-$UUID.loca.lt"
+        echo "::set-output name=address::https://fleet-test-$UUID.fleetuem.com"
   
   run-server:
     runs-on: ubuntu-latest
@@ -41,11 +35,20 @@ jobs:
 
     - name: Start tunnel
       run: |
-        npm install -g localtunnel
-        lt --port 1337 --subdomain ${{ needs.gen.outputs.subdomain }} &
+        # Install cloudflared
+        wget https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
+        sudo dpkg -i cloudflared-linux-amd64.deb
+        # Add secret
+        mkdir -p ~/.cloudflared
+        echo ${{ secrets.CLOUDFLARE_TUNNEL_FLEETUEM_CERT }} > ~/.cloudflared/cert.pem
+        # Start tunnel
+        cloudflared tunnel --hostname ${{ needs.gen.outputs.subdomain }} --url http://localhost:1337 --name ${{ needs.gen.outputs.subdomain }}
 
     - name: Run Fleet server
       timeout-minutes: 15
+      env:
+        # Use instance identifier to allow for duplicate UUIDs
+        FLEET_OSQUERY_HOST_IDENTIFIER: instance
       run: |
         chmod +x ./build/fleetctl
         ./build/fleetctl preview --no-hosts
@@ -87,7 +90,7 @@ jobs:
       run: |
         chmod +x ./build/fleetctl
         ./build/fleetctl config set --address ${{ needs.gen.outputs.address }}
-        until ./build/fleetctl login
+        until ./build/fleetctl login --email admin@example.com --password admin123#
         do
           echo "Retrying in 5s..."
           sleep 5
