--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -34,13 +34,12 @@ jobs:
         check_artifacts: true
 
     - name: Start tunnel
+      env: 
+        TUNNEL_ORIGIN_CERT: ${{ secrets.CLOUDFLARE_TUNNEL_FLEETUEM_CERT }}
       run: |
         # Install cloudflared
         wget https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
         sudo dpkg -i cloudflared-linux-amd64.deb
-        # Add secret
-        mkdir -p ~/.cloudflared
-        echo "${{ secrets.CLOUDFLARE_TUNNEL_FLEETUEM_CERT }}" > ~/.cloudflared/cert.pem
         # Start tunnel
         cloudflared tunnel --hostname ${{ needs.gen.outputs.subdomain }} --url http://localhost:1337 --name ${{ needs.gen.outputs.subdomain }}
 
