--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -35,13 +35,14 @@ jobs:
 
     - name: Start tunnel
       env: 
-        TUNNEL_ORIGIN_CERT: cert.pem
+        CERT_PEM: ${{ secrets.CLOUDFLARE_TUNNEL_FLEETUEM_CERT }}
       run: |
         # Install cloudflared
         wget https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64.deb
         sudo dpkg -i cloudflared-linux-amd64.deb
         # Add secret
-        echo "${{ secrets.CLOUDFLARE_TUNNEL_FLEETUEM_CERT }}" > $TUNNEL_ORIGIN_CERT
+        mkdir -p /etc/cloudflare
+        echo "$CERT_PEM" > /etc/cloudflare/cert.pem
         # Start tunnel
         cloudflared tunnel --hostname ${{ needs.gen.outputs.subdomain }} --url http://localhost:1337 --name ${{ needs.gen.outputs.subdomain }}
 
