--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -16,7 +16,7 @@ jobs:
     - id: gen
       run: |
         UUID=$(uuidgen)
-        echo "::set-output name=subdomain::fleet-preview-$UUID"
+        echo "::set-output name=subdomain::fleet-test-$UUID"
         echo "::set-output name=address::https://fleet-test-$UUID.fleetuem.com"
   
   run-server:
@@ -43,11 +43,11 @@ jobs:
         # Add secret
         echo "$CERT_PEM" | base64 -d > cert.pem
         # Start tunnel
-        cloudflared tunnel --origincert cert.pem --hostname ${{ needs.gen.outputs.subdomain }} --url http://localhost:1337 --name ${{ needs.gen.outputs.subdomain }}
-
-    - name: Debug on failure
-      if: failure()
-      uses: mxschmitt/action-tmate@v3
+        cloudflared tunnel --origincert cert.pem --hostname ${{ needs.gen.outputs.subdomain }} --url http://localhost:1337 --name ${{ needs.gen.outputs.subdomain }} &
+        until [ $(cloudflared tunnel --origincert cert.pem info -o json ${{ needs.gen.outputs.subdomain }} | jq '.conns[0].conns[0].is_pending_reconnect') -eq false ]; do
+          echo "Awaiting tunnel ready..."
+          sleep 5
+        done
 
     - name: Run Fleet server
       timeout-minutes: 15
